fixed alignemnt issues

--- a/src/app/body/body.component.scss
+++ b/src/app/body/body.component.scss
@@ -13,3 +13,16 @@
     height: 3rem;
     cursor: pointer;
 }
+.btn-color-1, .btn-color-2 {
+    border: black 0.1rem solid;
+}
+.btn-color-2 {
+    background: none;
+}
+.btn {
+    font-weight: 600;
+    transition: all 300ms ease;
+    padding: 1rem;
+    width: 8rem;
+    border-radius: 2rem;
+}
